[package]
name = "sel-checker"
version = "0.1.9"
edition = "2021"

[dependencies]
# GUI
eframe = { version = "0.31", default-features = false, features = [
  "glow",
  "default_fonts",
  "x11",
  "wayland",
] }
egui = "0.31"

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "net",
  "time",
  "sync",
  "io-util",
] }

# SSH / SFTP
russh = "0.49"
russh-sftp = "2.0"
async-trait = "0.1"

# HTTP with TLS skip
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-manual-roots",
] }

# Crypto for decrypting secrets.env.enc (OpenSSL enc -aes-256-cbc -pbkdf2)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"

# Cross-platform username
whoami = "1"

# Serde for JSON parsing (WordPress REST API, Planka)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# SSH key type (needed for russh Handler trait)
ssh-key = "0.6"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
